--- a/templates/manager/landlords_list.html
+++ b/templates/manager/landlords_list.html
@@ -15,7 +15,7 @@
                         Property Owners with properties under your management
                         <span style="padding-left: 10px">
                             <a id="j_idt182" href="{% url 'manager:landlords_new' %}"
-                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
+                               class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
                                 <span class="ui-button-text ui-c">Add New</span></a>
                         </span>
                     </div>
@@ -34,14 +34,14 @@
                             class="ui-paginator-page ui-state-default ui-corner-all" tabindex="0"
                             href="#">5</a></span><a
                             href="#" class="ui-paginator-next ui-state-default ui-corner-all" aria-label="Next Page"
-                            tabindex="0"><span class="ui-icon ui-icon-seek-next">N</span></a><a href="#"
-                                                                                                class="ui-paginator-last ui-state-default ui-corner-all"
-                                                                                                aria-label="Last Page"
-                                                                                                tabindex="0"><span
-                            class="ui-icon ui-icon-seek-end">E</span></a></div>
+                            tabindex="0"><span class="ui-icon ui-icon-seek-next">N</span></a>
+                        <a href="#" class="ui-paginator-last ui-state-default ui-corner-all" aria-label="Last Page"
+                           tabindex="0">
+                            <span class="ui-icon ui-icon-seek-end">E</span></a>
+                    </div>
 
                     <div class="ui-datatable-tablewrapper">
-                        <table role="grid">
+                        <table role="grid" id="table">
                             <thead id="form:j_idt47_head">
                             <tr role="row">
                                 <th id="form:j_idt47:j_idt49" class="ui-state-default ui-sortable-column"
@@ -61,7 +61,7 @@
                                 </th>
                                 <th id="form:j_idt47:j_idt55" class="ui-state-default ui-sortable-column"
                                     role="columnheader" aria-label="Color" scope="col">
-                                    <span class="ui-column-title">Actions</span>
+                                    <span class="ui-column-title">Nationality</span>
                                 </th>
                             </tr>
                             </thead>
@@ -76,13 +76,12 @@
                                     <td role="gridcell">{{ landlord.phone }}</td>
                                     <td role="gridcell">{{ landlord.date_created }}</td>
                                     <td role="gridcell">
-                                        <a class="btn btn-block"
+                                        {{ landlord.nationality }}
+                                        <a class="hidden"
                                            href="{{ landlord.get_absolute_url }}">
-                                            <span title="View Details" class="fa fa-eye"></span>
                                         </a>
                                     </td>
                                 </tr>
-                                <input type="hidden" id="Url" data-url="{% url 'manager:landlord_detail' pk=landlord.id %}"/>
                             {% endfor %}
                             </tbody>
                         </table>
@@ -129,6 +128,16 @@
                         groupColumnIndexes: []
                     });
                 });</script>
+                <script>
+                    $(document).ready(function () {
+                        $('#table tr').dblclick(function () {
+                            var href = $(this).find("a").attr("href");
+                            if (href) {
+                                window.location = href;
+                            }
+                        });
+                    });
+                </script>
             </div>
         </div>
     </div>
