--- a/templates/manager/property_unit_list.html
+++ b/templates/manager/property_unit_list.html
@@ -12,10 +12,10 @@
                 <h1>Property Units for: {{ property.title }}</h1>
                 <div id="form:j_idt47" class="ui-datatable ui-widget ui-datatable-reflow">
                     <div class="ui-datatable-header ui-widget-header ui-corner-top">
-                         Your Property Units
+                        Your Property Units
                         <span style="padding-left: 10px">
                             <a id="j_idt182" href="{% url 'manager:property_units_new' prop=prop %}"
-                           class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
+                               class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn">
                                 <span class="ui-button-text ui-c">Add New</span></a>
                         </span>
                     </div>
@@ -41,7 +41,7 @@
                             class="ui-icon ui-icon-seek-end">E</span></a></div>
 
                     <div class="ui-datatable-tablewrapper">
-                        <table role="grid">
+                        <table role="grid" id="table">
                             <thead id="form:j_idt47_head">
                             <tr role="row">
                                 <th id="form:j_idt47:j_idt49" class="ui-state-default ui-sortable-column"
@@ -61,7 +61,7 @@
                                 </th>
                                 <th id="form:j_idt47:j_idt55" class="ui-state-default ui-sortable-column"
                                     role="columnheader" aria-label="Color" scope="col">
-                                    <span class="ui-column-title">Actions</span>
+                                    <span class="ui-column-title">Total area (sqmts)</span>
                                 </th>
                             </tr>
                             </thead>
@@ -76,17 +76,12 @@
                                     <td role="gridcell">{{ unit.unit_title }}</td>
                                     <td role="gridcell">{{ unit.is_vacant }}</td>
                                     <td role="gridcell">
-                                        {% comment %}<a class="btn btn-block"
-                                           href="{% url 'manager:property_units_detail' pk=unit.id prop=prop %}">
-                                            <span title="View Details" class="fa fa-eye"></span>
-                                        </a>{% endcomment %}
-                                        <a class="btn btn-block"
+                                        {{ unit.total_area }}
+                                        <a class="hidden"
                                            href="{{ unit.get_absolute_url }}">
-                                            <span title="View Details" class="fa fa-eye"></span>
                                         </a>
                                     </td>
                                 </tr>
-                                <input type="hidden" id="Url" data-url="#"/>
                             {% endfor %}
                             </tbody>
                         </table>
@@ -133,6 +128,16 @@
                         groupColumnIndexes: []
                     });
                 });</script>
+                <script>
+                    $(document).ready(function () {
+                        $('#table tr').dblclick(function () {
+                            var href = $(this).find("a").attr("href");
+                            if (href) {
+                                window.location = href;
+                            }
+                        });
+                    });
+                </script>
             </div>
         </div>
     </div>
