--- a/templates/base_form.html
+++ b/templates/base_form.html
@@ -5,7 +5,7 @@
 {% for field in form %}
     <div class="ui-panelgrid-cell ui-g-12 ui-md-12">
         <label class="ui-outputlabel ui-widget"
-               for="{{ field.id_for_label }}">{{ field.label }}:</label>
+               for="{{ field.id_for_label }}">{{ field.label|title }}:</label>
     </div>
     <div class="ui-panelgrid-cell ui-g-12 ui-md-12">
         {{ field }}
@@ -28,7 +28,7 @@
             class="ui-button-text ui-c">SAVE</span></button>
     <script id="j_idt180_s"
             type="text/javascript">PrimeFaces.cw("CommandButton", "widget_j_idt180", {id: "j_idt180"});</script>
-    <a id="j_idt185" href="../" style="margin-bottom:10px;"
+    <a id="j_idt185" href="{% url 'manager:portal' %}" style="margin-bottom:10px;"
        class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only indigo-btn">
         <span class="ui-button-text ui-c">Cancel</span></a>
     <script id="j_idt185_s"
