--- a/templates/manager/index.html
+++ b/templates/manager/index.html
@@ -10,7 +10,7 @@
         <div class="ui-g-12 ui-md-3">
             <div class="overview-box overview-box-1">
                 <h1>REVENUE</h1>
-                <div class="overview-value">$25,620</div>
+                <div class="overview-value">$0</div>
                 <div class="overview-ratio">
                     <div class="overview-direction">
                         <i class="fa fa-arrow-up"></i>
@@ -25,7 +25,7 @@
         <div class="ui-g-12 ui-md-3">
             <div class="overview-box overview-box-2">
                 <h1>TENANTS</h1>
-                <div class="overview-value">9521</div>
+                <div class="overview-value">{{ tenants_count }}</div>
                 <div class="overview-ratio">
                     <div class="overview-direction">
                         <i class="fa fa-arrow-up"></i>
@@ -40,7 +40,7 @@
         <div class="ui-g-12 ui-md-3">
             <div class="overview-box overview-box-3">
                 <h1>PORTFOLIOS</h1>
-                <div class="overview-value">452</div>
+                <div class="overview-value">{{ portfolios }}</div>
                 <div class="overview-ratio">
                     <div class="overview-direction">
                         <i class="fa fa-arrow-up"></i>
@@ -55,7 +55,7 @@
         <div class="ui-g-12 ui-md-3">
             <div class="overview-box overview-box-4">
                 <h1>MARKET SHARE</h1>
-                <div class="overview-value">65922</div>
+                <div class="overview-value">0%</div>
                 <div class="overview-ratio">
                     <div class="overview-direction">
                         <i class="fa fa-arrow-up"></i>
