--- a/templates/manager/landlords_list.html
+++ b/templates/manager/landlords_list.html
@@ -67,22 +67,25 @@
                             </thead>
 
                             <tbody id="form:j_idt47_data" class="ui-datatable-data ui-widget-content" tabindex="0">
-                            {% for landlord in landlords %}
-
-                                <tr class="ui-widget-content ui-datatable-odd ui-datatable-selectable ui-datatable-scrollable"
-                                    role="row" onclick=""
-                                    aria-selected="false">
-                                    <td role="gridcell">{{ landlord.name }}</td>
-                                    <td role="gridcell">{{ landlord.phone }}</td>
-                                    <td role="gridcell">{{ landlord.date_created }}</td>
-                                    <td role="gridcell">
-                                        {{ landlord.nationality }}
-                                        <a class="hidden"
-                                           href="{{ landlord.get_absolute_url }}">
-                                        </a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
+                            {% if not landlords.count == 0 %}
+                                {% for landlord in landlords %}
+                                    <tr class="ui-widget-content ui-datatable-odd ui-datatable-selectable ui-datatable-scrollable"
+                                        role="row" onclick=""
+                                        aria-selected="false">
+                                        <td role="gridcell">{{ landlord.name }}</td>
+                                        <td role="gridcell">{{ landlord.phone }}</td>
+                                        <td role="gridcell">{{ landlord.date_created }}</td>
+                                        <td role="gridcell">
+                                            {{ landlord.nationality }}
+                                            <a class="hidden"
+                                               href="{{ landlord.get_absolute_url }}">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            {% else %}
+                                <h1>No Data In Database</h1>
+                            {% endif %}
                             </tbody>
                         </table>
                     </div>
