--- a/templates/manager/tenant_list.html
+++ b/templates/manager/tenant_list.html
@@ -67,21 +67,26 @@
                             </thead>
 
                             <tbody id="form:j_idt47_data" class="ui-datatable-data ui-widget-content" tabindex="0">
-                            {% for tenant in tenants %}
-                                <tr class="ui-widget-content ui-datatable-odd ui-datatable-selectable ui-datatable-scrollable"
-                                    role="row" onclick=""
-                                    aria-selected="false">
-                                    <td role="gridcell">{{ tenant.property }}</td>
-                                    <td role="gridcell">{{ tenant.tenant_name }}</td>
-                                    <td role="gridcell">{{ tenant.trading_as_list_name }}</td>
-                                    <td role="gridcell">
-                                        {{ tenant.nationality }}
-                                        <a class="hidden"
-                                           href="{{ tenant.get_absolute_url }}">
-                                        </a>
-                                    </td>
-                                </tr>
-                            {% endfor %}
+                            {% if not tenants.count == 0 %}
+                                {% for tenant in tenants %}
+                                    <tr class="ui-widget-content ui-datatable-odd ui-datatable-selectable ui-datatable-scrollable"
+                                        role="row" onclick=""
+                                        aria-selected="false">
+                                        <td role="gridcell">{{ tenant.property }}</td>
+                                        <td role="gridcell">{{ tenant.tenant_name }}</td>
+                                        <td role="gridcell">{{ tenant.trading_as_list_name }}</td>
+                                        <td role="gridcell">
+                                            {{ tenant.nationality }}
+                                            <a class="hidden"
+                                               href="{{ tenant.get_absolute_url }}">
+                                            </a>
+                                        </td>
+                                    </tr>
+                                {% endfor %}
+                            {% else %}
+                                <h1>No Data In Database</h1>
+                            {% endif %}
+
                             </tbody>
                         </table>
                     </div>
