--- a/templates/manager/tenant_detail.html
+++ b/templates/manager/tenant_detail.html
@@ -126,7 +126,7 @@
                 </table>
                 <div class="ui-g">
                     <div>
-                        <a id="j_idt180" href="#"
+                        <a id="j_idt180" href="{% url 'manager:property_tenant_update' prop=prop pk=tenant.pk %}"
                            class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn"
                            style="margin-bottom:10px; margin-top: 10px" type="button"><span
                                 class="ui-button-text ui-c">Update</span></a>
