--- a/templates/index.html
+++ b/templates/index.html
@@ -51,38 +51,30 @@
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-6 ui-lg-3 centerText">
                     <i class="fa fa-cube fa-feature" aria-hidden="true"></i>
-                    <h2>Creative</h2>
+                    <h2>Robust</h2>
                     <p>
-                        Vitae potenti ante praesent <br/>
-                        a dui eget nibh eu quam <br/>
-                        accumsan porttitor tincidunt
+
                     </p>
                 </div>
                 <div class="ui-g-12 ui-md-6 ui-lg-3 centerText">
                     <i class="fa fa-leaf fa-feature" aria-hidden="true"></i>
-                    <h2>Responsive</h2>
+                    <h2>Scalable</h2>
                     <p>
-                        Vitae potenti ante praesent <br/>
-                        a dui eget nibh eu quam <br/>
-                        accumsan porttitor tincidunt
-                    </p>
-                </div>
-                <div class="ui-g-12 ui-md-6 ui-lg-3 centerText">
-                    <i class="fa fa-magic fa-feature" aria-hidden="true"></i>
-                    <h2>Cross Browser</h2>
-                    <p>
-                        Vitae potenti ante praesent <br/>
-                        a dui eget nibh eu quam <br/>
-                        accumsan porttitor tincidunt
+
                     </p>
                 </div>
                 <div class="ui-g-12 ui-md-6 ui-lg-3 centerText">
                     <i class="fa fa-sitemap fa-feature" aria-hidden="true"></i>
-                    <h2>Well Organized</h2>
+                    <h2>Cross Platform</h2>
                     <p>
-                        Vitae potenti ante praesent <br/>
-                        a dui eget nibh eu quam <br/>
-                        accumsan porttitor tincidunt
+
+                    </p>
+                </div>
+                <div class="ui-g-12 ui-md-6 ui-lg-3 centerText">
+                    <i class="fa fa-cloud fa-feature" aria-hidden="true"></i>
+                    <h2>Cloud Service</h2>
+                    <p>
+
                     </p>
                 </div>
             </div>
@@ -92,43 +84,35 @@
     <div id="pricing">
         <div class="pricing-content">
             <span class="pricing-title">Pricing</span>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-                doloremque laudantium, totam rem aperiam.</p>
+            <p>
+
+            </p>
 
             <div class="ui-g">
                 <div class="ui-g-12 ui-md-4">
                     <div class="pricing-basic pricing-box">
                         <span class="pricing-name">Basic</span>
-                        <div class="pricing-fee">1$</div>
+                        <div class="pricing-fee">$0.00</div>
 
-                        <p>50GB Disk Space</p>
-                        <p>500GB Monthly Bandwith</p>
-                        <p>20 Email Accounts</p>
-                        <p>5 Subdomain</p>
+                        <p>Basic</p>
                     </div>
                 </div>
 
                 <div class="ui-g-12 ui-md-4">
                     <div class="pricing-standard pricing-box">
                         <span class="pricing-name">Standard</span>
-                        <div class="pricing-fee">5$</div>
+                        <div class="pricing-fee">$0.00</div>
 
-                        <p>200GB Disk Space</p>
-                        <p>1TB Monthly Bandwith</p>
-                        <p>50 Email Accounts</p>
-                        <p>10 Subdomain</p>
+                        <p>Standard</p>
                     </div>
                 </div>
 
                 <div class="ui-g-12 ui-md-4">
                     <div class="pricing-professional pricing-box">
                         <span class="pricing-name">Professional</span>
-                        <div class="pricing-fee">10$</div>
+                        <div class="pricing-fee">$0.00</div>
 
-                        <p>2TB Disk Space</p>
-                        <p>10TB Monthly Bandwith</p>
-                        <p>Unlimited Email Accounts</p>
-                        <p>50 Subdomain</p>
+                        <p>Professional</p>
                     </div>
                 </div>
             </div>
