--- a/templates/manager/lease_detail.html
+++ b/templates/manager/lease_detail.html
@@ -202,7 +202,7 @@
                 </table>
                 <div class="ui-g">
                     <div>
-                        <a id="j_idt180" href="#"
+                        <a id="j_idt180" href="{% url 'manager:tenant_lease_update' prop=prop ten=ten pk=lease.pk %}"
                            class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only purple-btn"
                            style="margin-bottom:10px; margin-top: 10px" type="button"><span
                                 class="ui-button-text ui-c">Update</span></a>
